--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11500,3 +11500,15 @@ body.sidebar-toggled footer.sticky-footer {
   font-weight: 900;
 }
 
+.btn-disabled {
+  opacity: 0.7;
+  background-color: #484a54;
+  border-color: #42444e;
+}
+
+.btn-disabled:hover {
+  background-color: #484a54;
+  border-color: #42444e;
+  opacity: 0.7;
+}
+
