added css fot tasks and .tasks-container, fixed empty asnwers

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,7 +18,15 @@ a.card:hover {
   text-decoration: none;
 }
 .task {
-  margin-bottom: 25px;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  &:not(:last-child) {
+    border-bottom: 2px solid rgba(75, 112, 221, 0.45);
+  }
+}
+.alert-danger .task {
+  border-color: rgba(0, 0, 0, 0.5);
+  border-width: 1px;
 }
 .counter {
   font-weight: 900;
