--- a/resources/sass/custom-input.scss
+++ b/resources/sass/custom-input.scss
@@ -4,7 +4,9 @@
   margin: 10px 0;
   position: relative;
   padding: 0;
-
+  b {
+    margin-right: 5px;
+  }
   label {
     padding: 12px 30px;
     width: 100%;
