--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -102,6 +102,15 @@ a.card:hover {
 }
 
 
+.kniga-resheniy-section {
+  margin-bottom: 25px;
+  .heading {
+    font-weight: 800;
+    font-size: 20px;
+    margin-bottom: 5px;
+  }
+}
+
 
 @media (max-width: 992px) {
   .task {
