--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11708,7 +11708,7 @@ z {
 z:before {
   counter-increment: z;
   /* Указываем идентификатор счетчика */
-  content: "\41F\440\438\43C\435\440   2." counter(z) ". ";
+  content: "\41F\440\438\43C\435\440   " counter(z) ". ";
   /* Выводим текст перед содержимым тега <h2> */
 }
 
