--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -117,7 +117,7 @@ z {font-weight: bold;
   color: midnightblue;}
 z:before {
   counter-increment: z; /* Указываем идентификатор счетчика */
-  content: "Пример 2." counter(z) ". "; /* Выводим текст перед содержимым тега <h2> */
+  content: "Пример " counter(z) ". "; /* Выводим текст перед содержимым тега <h2> */
 }
 
 .scrollspy-example {
