--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,6 +12,7 @@
 @import "../css/sb-admin-2.css";
 @import "../css/style.css";
 @import "custom-input";
+@import "get-start";
 
 a.card:hover {
   opacity: .85;
