added filter for tasks

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,6 +21,7 @@ a.card:hover {
 .task {
   padding-bottom: 20px;
   margin-bottom: 20px;
+  position: relative;
   &:not(:last-child) {
     border-bottom: 2px solid rgba(75, 112, 221, 0.45);
   }
