--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11112,6 +11112,7 @@ a.card:hover {
 .task {
   padding-bottom: 20px;
   margin-bottom: 20px;
+  position: relative;
 }
 
 .task:not(:last-child) {
