completed front end && check answers && adeed meta users && leve up

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11230,6 +11230,10 @@ z:before {
   /* Выводим текст перед содержимым тега <h2> */
 }
 
+.text-dark {
+  color: #000 !important;
+}
+
 @media (max-width: 992px) {
   .task .heading {
     overflow-x: auto;
