--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -129,6 +129,11 @@ z:before {
   //overflow: auto;
 }
 
+
+.text-dark {
+  color: #000 !important;
+}
+
 @media (max-width: 992px) {
   .task {
     .heading {
@@ -136,3 +141,4 @@ z:before {
     }
   }
 }
+
