--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -133,6 +133,16 @@ z:before {
 .text-dark {
   color: #000 !important;
 }
+.otvet-kod {
+  padding-left: 10px;
+  &::placeholder {
+    opacity:.6;
+  }
+}
+
+[class*='hints-'] {
+  margin-bottom: 15px;
+}
 
 @media (max-width: 992px) {
   .task {
