--- a/resources/sass/get-start.scss
+++ b/resources/sass/get-start.scss
@@ -1,8 +1,12 @@
 .steps {
-  color: blue;
+
 }
 .timer {
-  color: blue;
+  font-size: 17px;
+  font-weight: 400;
+  border: 1px solid rgb(170, 170, 170);
+  padding: 9px 13px;
+  border-radius: 0;
 }
 .task-body {
   margin-bottom: 15px;
